# Complex-Wrinkle-Field

./: .gitignore  .gitmodules  .polyscope.ini  CMakeLists.txt  GPUCOMPLING.txt  LICENSE  README.md  Side_vertex.nb  Side_vertex.nb.REMOVED.git-id  amp_tar.txt  main.cpp  omega.txt  omega_tar.txt  rotMatrix.nb  zvals.txt  zvals_tar.txt
app/: CMakeLists.txt
app/BestAmpFreqEstimate/: CMakeLists.txt  main.cpp
app/CWFProcessCli/: CMakeLists.txt  main.cpp
app/DidacticExample/: CMakeLists.txt  main.cpp
app/InterpolationComparison/: CMakeLists.txt  main.cpp
app/InterpolationStaticComp/: CMakeLists.txt  main.cpp
app/LoadSequence/: CMakeLists.txt  main.cpp
app/LoopSubdivide/: CMakeLists.txt  main.cpp
app/LoopSubdivideTest/: CMakeLists.txt  main.cpp
app/OtherApproachesCli/: CMakeLists.txt  main.cpp
app/OtherApproachesComparison/: CMakeLists.txt  main.cpp
app/SmoothestVecGen/: CMakeLists.txt  main.cpp
app/SpherigonTest/: CMakeLists.txt  main.cpp
app/StaticWrinkleEditor/: CMakeLists.txt  main.cpp
app/StaticWrinkleEditor_edgebased/: CMakeLists.txt  main.cpp
app/StaticWrinkleEditor_halfEdgebased/: CMakeLists.txt  main.cpp
app/TFWSamplingGui/: CMakeLists.txt  main.cpp
app/UserDesignGui/: CMakeLists.txt
app/UserDesignerApp/: CMakeLists.txt  main.cpp
app/UserWrinkleDesign/: CMakeLists.txt  main.cpp
app/WrinkleInterpolationCli/: CMakeLists.txt  main.cpp
app/WrinkleInterpolationGui/: CMakeLists.txt  main.cpp
app/WrinkleInterpolationQuasiStaticInput/: CMakeLists.txt  main.cpp
app/WrinkleInterpolationTwistedCylinder/: CMakeLists.txt  main.cpp
app/WrinkleVisualization/: CMakeLists.txt  main.cpp
app/viewer2d/: CMakeLists.txt  main.cpp
app/viewer2d_vertexversion/: CMakeLists.txt  main.cpp
app/viewer3d/: CMakeLists.txt  main.cpp
app/viewer3d_vertexversion/: CMakeLists.txt  main.cpp
app/viewer_TFW/: CMakeLists.txt  main.cpp
app/viewer_staticWrinkleEditor_edgebased/: CMakeLists.txt  main.cpp
app/viewer_wrinkleEditor/: CMakeLists.txt  main.cpp
app/viewer_wrinkleEditor_edgebased/: CMakeLists.txt  main.cpp
app/viewer_wrinkleEditor_toycase/: CMakeLists.txt  main.cpp
app/viewer_wrinkleGlue/: CMakeLists.txt  main.cpp
cmake/: FindLIBIGL.cmake  FindMETIS.cmake  FindMKL.cmake  FindNASOQ.cmake  FindSPECTRA.cmake  FindSuiteSparse.cmake  geometry-central.cmake  libigl.cmake
data/: _optInfo.txt  data.json  final_res.txt  final_res.txt.REMOVED.git-id  halfEdgeOmega_0.txt  halfEdgeOmega_1.txt  halfEdgeOmega_10.txt  halfEdgeOmega_11.txt  halfEdgeOmega_12.txt  halfEdgeOmega_13.txt  halfEdgeOmega_14.txt  halfEdgeOmega_15.txt  halfEdgeOmega_16.txt  halfEdgeOmega_17.txt  halfEdgeOmega_18.txt  halfEdgeOmega_19.txt  halfEdgeOmega_2.txt  halfEdgeOmega_20.txt  halfEdgeOmega_21.txt  halfEdgeOmega_22.txt  halfEdgeOmega_23.txt  halfEdgeOmega_24.txt  halfEdgeOmega_25.txt  halfEdgeOmega_26.txt  halfEdgeOmega_27.txt  halfEdgeOmega_28.txt  halfEdgeOmega_29.txt  halfEdgeOmega_3.txt  halfEdgeOmega_30.txt  halfEdgeOmega_31.txt  halfEdgeOmega_32.txt  halfEdgeOmega_33.txt  halfEdgeOmega_34.txt  halfEdgeOmega_35.txt  halfEdgeOmega_36.txt  halfEdgeOmega_37.txt  halfEdgeOmega_38.txt  halfEdgeOmega_39.txt  halfEdgeOmega_4.txt  halfEdgeOmega_40.txt  (+173 more)
data/CIPC_cylinder_CWF_init/: cylinder_amplitude_simulated.txt  cylinder_dphi_simulated.txt  imgui.ini  omega_opt.txt  zvals_opt.txt
data/CIPC_cylinder_CWF_tar/: data.json  imgui.ini  omega_opt.txt  zvals_opt.txt
data/CIPC_cylinder_rotation/: amp.txt  amp_WTF_init.txt  amp_WTF_tar.txt  amp_opt.txt  data.json  imgui.ini  omega.txt  omega_WTF_init.txt  omega_WTF_tar.txt  omega_opt.txt  optInfo.txt  zvals.txt
data/CIPC_cylinder_rotation_saved/: amp_opt.txt  data.json  optInfo.txt
data/TFW_dress2/: data.json  imgui.ini  intermediate.txt  intermediate.txt.REMOVED.git-id  optInfo.txt  zvals.txt
data/balloon/: data.json
data/bunny_globalRotation/: bunny_new.hiplc  bunny_new.hiplc.REMOVED.git-id  data.json  imgui.ini  optInfo.txt
data/bunny_localRotation/: .polyscope.ini  bunny_local_rotation.gif.REMOVED.git-id  bunny_new.hiplc  bunny_new.hiplc.REMOVED.git-id  data.json  design.json  imgui.ini  optInfo.txt  zvals.txt
data/bunnyhead/: _optInfo.txt  final_res.txt.REMOVED.git-id  halfEdgeOmega_0.txt  halfEdgeOmega_1.txt  halfEdgeOmega_10.txt  halfEdgeOmega_11.txt  halfEdgeOmega_12.txt  halfEdgeOmega_13.txt  halfEdgeOmega_14.txt  halfEdgeOmega_15.txt  halfEdgeOmega_16.txt  halfEdgeOmega_17.txt  halfEdgeOmega_18.txt  halfEdgeOmega_19.txt  halfEdgeOmega_2.txt  halfEdgeOmega_20.txt  halfEdgeOmega_21.txt  halfEdgeOmega_22.txt  halfEdgeOmega_23.txt  halfEdgeOmega_24.txt  halfEdgeOmega_25.txt  halfEdgeOmega_26.txt  halfEdgeOmega_27.txt  halfEdgeOmega_28.txt  halfEdgeOmega_29.txt  halfEdgeOmega_3.txt  halfEdgeOmega_30.txt  halfEdgeOmega_31.txt  halfEdgeOmega_32.txt  halfEdgeOmega_33.txt  halfEdgeOmega_34.txt  halfEdgeOmega_35.txt  halfEdgeOmega_36.txt  halfEdgeOmega_37.txt  halfEdgeOmega_38.txt  halfEdgeOmega_39.txt  halfEdgeOmega_4.txt  halfEdgeOmega_40.txt  halfEdgeOmega_41.txt  halfEdgeOmega_42.txt  (+67 more)
data/cerda/: _optInfo.txt  final_res.txt.REMOVED.git-id  intermediate.txt.REMOVED.git-id
data/cube/: _optInfo.txt  data.json  final_res.txt  halfEdgeOmega_0.txt  (+10 more)
include/: AmpExtraction.h  CoMISoWrapper.h  CommonTools.h  ComplexLoop.h  ComplexLoopNew.h  GetInterpVertexPhi.h  GetInterpVertexValues.h  GetSideVertexPhi.h  InterpolationSchemes.h  LoadSaveIO.h  SecMeshParsing.h  SpherigonSmoothing.h  TFWPhiRounding.h  WrinkleFieldsEditor.h  getSideVertexPhi.h  json.hpp.REMOVED.git-id  testMeshGeneration.h  timer.h
pythonScript/: CWFBatchProcess.py  CWFCommon.py  OtherApproachesBatchProcess.py  OtherApproachesCommon.py  batchImg2Videos.py  batchpng2jpg.py  copyFiles.py  getOptInfo.py  numFramesBatchProcess.py  png2jpeg.py
src/: AmpExtraction.cpp  CoMISoWrapper.cpp  CommonTools.cpp  ComplexLoop.cpp  ComplexLoopNew.cpp  GetInterpVertexPhi.cpp  GetInterpVertexValues.cpp  GetSideVertexPhi.cpp  LoadSaveIO.cpp  SecMeshParse.cpp  SpherigonSmoothing.cpp  TFWPhiRounding.cpp  WrinkleFieldsEditor.cpp  getSideVertexPhi.cpp  testMeshGeneration.cpp
(+3839 files in other folders)
