add_subdirectory(StaticWrinkleEditor)
add_subdirectory(UserDesignerApp)
add_subdirectory(LoopSubdivide)
add_subdirectory(WrinkleVisualization)
add_subdirectory(SmoothestVecGen)
add_subdirectory(DidacticExample)
add_subdirectory(LoadSequence)
add_subdirectory(InterpolationComparison)
add_subdirectory(InterpolationStaticComp)
add_subdirectory(OtherApproachesComparison)
add_subdirectory(TFWSamplingGui)
add_subdirectory(SpherigonTest)